<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.miempresa</groupId>
	<artifactId>string-utils-extension</artifactId>
	<version>1.0.2-SNAPSHOT</version>
	<packaging>mule-extension</packaging>
	<name>String Utils Extension</name>

	<parent>
		<groupId>org.mule.extensions</groupId>
		<artifactId>mule-modules-parent</artifactId>
		<version>1.7.0</version>
	</parent>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>
						<arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
						<arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>mulesoft-releases</id>
			<name>MuleSoft Releases Repository</name>
			<url>https://repository.mulesoft.org/releases/</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>mule-public</id>
			<name>MuleSoft Public Repository</name>
			<url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
			<layout>default</layout>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>mulesoft-releases</id>
			<name>MuleSoft Releases Repository</name>
			<url>https://repository.mulesoft.org/releases/</url>
			<layout>default</layout>
		</pluginRepository>
		<pluginRepository>
			<id>mule-public</id>
			<name>MuleSoft Public Repository</name>
			<url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
			<layout>default</layout>
		</pluginRepository>
	</pluginRepositories>
</project>